python/testData/highlighting/mixedBytesAndNonBytes.py
<error descr="Python version 3.6 does not allow to mix bytes and non-bytes literals">b'qwe'u'asd'</error>
<error descr="Python version 3.6 does not allow to mix bytes and non-bytes literals">b'qwe'r'asd'</error>
<error descr="Python version 3.6 does not allow to mix bytes and non-bytes literals">b'qwe'f'asd'</error>